<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="es">
    <string name="about">Acerca de…</string>
    <string name="about_deambulario">Acerca de Deambulario</string>
    <string name="account">Cuenta</string>
    <string name="action">Acción</string>
    <string name="active_geofence">Geovalla activa</string>
    <string name="activities">Actividades</string>
    <string name="activity_status">Estado de la actividad</string>
    <string name="add">Añadir</string>
    <string name="add_activity">Añadir Actividad</string>
    <string name="add_content">Añadir contenido</string>
    <string name="add_milestone">Añadir hito</string>
    <string name="add_new_circle">Añadir nuevo círculo</string>
    <string name="add_option">Añadir opción</string>
    <string name="all_milestones_visited">¡Todos los hitos recorridos!</string>
    <string name="answer_cannot_be_empty">Debes escribir tu respuesta.</string>
    <string name="app_name">Deambulario</string>
    <string name="app_version">Versión de la aplicación</string>
    <string name="appearance">Apariencia</string>
    <string name="authentication_failed">Falló la autenticación.</string>
    <string name="broadcast_advise">Este mensaje se enviará simultáneamente a todo el alumnado de la sesión.</string>
    <string name="broadcast_message">Aviso general a la clase</string>
    <string name="camera">Cámara</string>
    <string name="cancel">Cancelar</string>
    <string name="cannot_be_empty">Introduzca contenido.</string>
    <string name="change_nickname">Cambiar nick</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="change_password_message">Se ha enviado un correo a %s para restablecer tu contraseña. Revisa tu bandeja de entrada.</string>
    <string name="change_username">Cambiar nombre de usuario</string>
    <string name="close">Cerrar</string>
    <string name="color">Color</string>
    <string name="confirm_activity_deletion">¿Estás seguro de que deseas eliminar esta actividad? Esta acción no se puede deshacer.</string>
    <string name="confirm_content_deletion">¿Estás seguro de que deseas eliminar este contenido? Esta acción no se puede deshacer.</string>
    <string name="confirm_coordinates">Confirmar posición</string>
    <string name="content">Contenido</string>
    <string name="continue_session">Continuar con la sesión</string>
    <string name="create_account">Crear cuenta de profesor/a</string>
    <string name="csv_activity">"Actividad "</string>
    <string name="csv_date_label">FECHA:</string>
    <string name="csv_no_activities">No hay actividades registradas en esta sesión.\\n</string>
    <string name="csv_no_text">(Sin enunciado)</string>
    <string name="csv_route_label">RUTA:</string>
    <string name="csv_student">Alumno/a;</string>
    <string name="curricula">Encaje didáctico</string>
    <string name="data_loading">Cargando datos aún…</string>
    <string name="date_formatter">d \'de\' MMMM \'de\' yyyy</string>
    <string name="delete">Borrar</string>
    <string name="delete_account_definitively">Eliminar definitivamente</string>
    <string name="delete_account_message">Esta acción es irreversible. Se borrarán todos tus datos. ¿Deseas continuar?</string>
    <string name="delete_all">Eliminar todo</string>
    <string name="delete_milestone">Eliminar hito</string>
    <string name="delete_milestone_confirming">¿Estás seguro de que deseas eliminar este hito? Esta acción borrará también todos sus contenidos y actividades.</string>
    <string name="delete_route_confirmation_message">¿Seguro que desea borrar esta ruta y todos sus hitos?</string>
    <string name="delete_route_title">Borrar ruta</string>
    <string name="delete_session">Eliminar sesión</string>
    <string name="delete_session_confirming">¿Seguro que deseas eliminar esta sesión y todos sus datos asociados?\nNOTA: Las respuestas multimedia estarán disponibles hasta 90 días después de haber sido enviadas.</string>
    <string name="deleted_account">Cuenta eliminada</string>
    <string name="details">Detalles</string>
    <string name="developed_by_and_version">Desarrollado por Mario López Salazar.\nIES Aguadulce.\nVersión 1.0</string>
    <string name="distance_to_milestone">Siguiente hito: %dm</string>
    <string name="do_milestone">Realizar hito</string>
    <string name="download_answers">Descargar respuestas</string>
    <string name="edit">Editar</string>
    <string name="educative_level">Nivel educativo</string>
    <string name="email">Correo electrónico</string>
    <string name="empty" />
    <string name="empty_message">El mensaje no puede estar vacío</string>
    <string name="empty_milestone_message">¡Hito completado!\nAquí no hay contenidos ni actividades.</string>
    <string name="empty_password">Contraseña vacía</string>
    <string name="enable_geofence">Habilitar geovallado</string>
    <string name="END">FIN</string>
    <string name="end_session">Finalizar sesión</string>
    <string name="end_session_lobby_confirm">¿Estás seguro de que quieres cancelar esta sesión? El PIN dejará de ser válido y los alumnos tendrán que volver a unirse.</string>
    <string name="end_session_track">¿Estás seguro de que deseas finalizar esta sesión activa? Los alumnos serán desconectados.</string>
    <string name="enter">Entrar</string>
    <string name="enter_milestone">Entrar al hito: %s</string>
    <string name="enter_session">¡Unirme!</string>
    <string name="error_email_already_in_use">El email ya está en uso.</string>
    <string name="error_invalid_credentials">Email o contraseña incorrecta.</string>
    <string name="error_network">Hay problemas con la conexión a Internet…</string>
    <string name="error_saving">No se pudo guardar, vuelve a intentarlo.</string>
    <string name="error_upload_instructions">Tu respuesta no ha podido ser subida. Si es una foto o vídeo, guárdala en tu galería e inténtalo de nuevo cuando tengas mejor conexión.</string>
    <string name="error_upload_title">Error de subida</string>
    <string name="error_user_not_found">El usuario no existe o ha sido borrado.</string>
    <string name="error_when_account_deletion">Error al eliminar la cuenta</string>
    <string name="error_when_creating_session">Error al crear la sesión.</string>
    <string name="exit_without_saving">Salir sin guardar</string>
    <string name="faq">Preguntas frecuentes</string>
    <string name="fence">Valla</string>
    <string name="find_session">Buscar sesiones por ruta…</string>
    <string name="finished">Ruta completada</string>
    <string name="forgotten_password">¿Olvidaste tu contraseña?</string>
    <string name="full_name">Nombre completo</string>
    <string name="gallery">Galería</string>
    <string name="geofence_active">📍 Geovallado activo</string>
    <string name="geofence_alert_message">¿Enviar aviso a %s?</string>
    <string name="geofence_alert_title">Alumno/a fuera de geovallado</string>
    <string name="geofence_enabled">Geovallado habilitado</string>
    <string name="geofence_inactive">📍 Geovallado desactivado</string>
    <string name="geofence_none">📍 Sin geovallado</string>
    <string name="getting_answers">Obteniendo las respuestas…</string>
    <string name="guide_activity1">¿De qué color era el caballo blanco de Santiago?</string>
    <string name="guide_activity1_answer">Blanco</string>
    <string name="guide_activity2">¿Qué tipo de animal es un caballo?</string>
    <string name="guide_activity2_answer1">Pez</string>
    <string name="guide_activity2_answer2">Mamífero</string>
    <string name="guide_activity2_answer3">Ave</string>
    <string name="guide_content1">No es fácil modelar un caballo en bronce, aunque este está genial.</string>
    <string name="guide_content2">android.resource://com.iesaguadulce.deambulario/drawable/picture_guide</string>
    <string name="guide_milestone2">Esculturas efímeras</string>
    <string name="guide_milestone3">Una sorpresa inesperada</string>
    <string name="guide_milestone_button_text">Entrar al hito</string>
    <string name="guide_milestone_title">Estatua ecuestre</string>
    <string name="guide_route_curricula">Recorrido histórico-cultural por el parque.</string>
    <string name="guide_route_level">3º de ESO</string>
    <string name="guide_route_title">Esculturas en el parque</string>
    <string name="guide_student1">Lucía G.</string>
    <string name="guide_student2">Pablo M.</string>
    <string name="guide_student3">María S.</string>
    <string name="guide_student4">Hugo T.</string>
    <string name="guide_student5">Elena R.</string>
    <string name="guide_student6">Carlos V.</string>
    <string name="guide_student_text_1">Aquí encontrarás información sobre el siguiente hito.\n\nUsa el mapa para llegar hasta él.</string>
    <string name="guide_student_text_2">En este botón podrás acceder a los contenidos y actividades.</string>
    <string name="guide_student_text_3">Aquí verás los mensajes que te ha enviado tu profe.</string>
    <string name="guide_student_text_4">¿Quieres saber cómo llevas la ruta?\n\nAquí podrás visualizar tu progreso.</string>
    <string name="guide_student_text_5">Cambia el color, letra, idioma o volumen.\n\nTambién encontrarás ayuda adicional.</string>
    <string name="guide_student_text_6">Si tienes problemas, puedes enviar un mensaje SOS a tu profe.</string>
    <string name="guide_student_text_7">Procura no eliminar la aplicación mientras haces la ruta.\n\nSal de la sesión cuando tu profe te lo indique.</string>
    <string name="im_student">Soy alumno/a</string>
    <string name="im_teacher">Soy profesor/a</string>
    <string name="leave_session">Abandonar la sesión</string>
    <string name="lobby">Sala de espera</string>
    <string name="milestone_detail">Detalle de hito</string>
    <string name="no_routes">No se encontraron rutas.</string>
    <string name="out_of_geofence">Fuera del geovallado</string>
    <string name="pref_about">Acerca de</string>
    <string name="pref_category_account">Cuenta</string>
    <string name="pref_category_appearance">Apariencia</string>
    <string name="pref_category_help">Ayuda y soporte</string>
    <string name="pref_category_info">Información</string>
    <string name="pref_category_permissions">Permisos</string>
    <string name="pref_category_sound">Sonido</string>
    <string name="pref_change_name">Cambiar nombre</string>
    <string name="pref_change_password">Cambiar contraseña</string>
    <string name="pref_color_palette">Colores</string>
    <string name="pref_delete_account">Eliminar cuenta</string>
    <string name="pref_faq">Preguntas frecuentes</string>
    <string name="pref_font_size">Tamaño de letra</string>
    <string name="pref_interactive_guide">Guía interactiva</string>
    <string name="pref_language">Idioma</string>
    <string name="pref_logout">Cerrar sesión</string>
    <string name="pref_manage_permissions">Gestionar permisos</string>
    <string name="pref_theme">Tema</string>
    <string name="pref_volume">Volumen</string>
    <string name="privacy_policy_label">Política de Privacidad y Aviso Legal</string>
    <string name="profile">Perfil</string>
    <string name="reject">Expulsar alumno</string>
    <string name="route_details">Detalle de ruta</string>
    <string name="route_edit">Editar ruta</string>
    <string name="routes">Rutas</string>
    <string name="search_route">Buscar ruta…</string>
    <string name="see_my_development">Ver mi progreso</string>
    <string name="send_multicast_message">Enviar mensaje masivo</string>
    <string name="sessions">Sesiones</string>
    <string name="set_position">Configurar posición</string>
    <string name="set_up_geofence">Configurar geovallado</string>
    <string name="sos">¡Enviar alerta a mi profe!</string>
    <string name="status">Estado</string>
    <string name="waiting">Esperando…</string>
    <string name="welcome">Deambulario</string>
</resources>