<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

        <PreferenceCategory app:title="@string/pref_category_appearance">
        <ListPreference
            app:key="pref_teacher_theme"
            app:title="@string/pref_theme"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="pref_teacher_language"
            app:title="@string/pref_language"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="es"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/pref_category_permissions">
        <Preference
            app:key="pref_permissions"
            app:title="@string/pref_manage_permissions" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/pref_category_account">
        <EditTextPreference
            app:key="pref_teacher_name"
            app:title="@string/pref_change_name" />

        <Preference
            app:key="pref_teacher_change_password"
            app:title="@string/pref_change_password" />

        <Preference
            app:key="pref_teacher_logout"
            app:title="@string/pref_logout" />

        <Preference
            app:key="pref_teacher_delete_account"
            app:title="@string/pref_delete_account" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/pref_category_help">
        <Preference
            app:key="pref_teacher_guide"
            app:title="@string/pref_interactive_guide" />

        <Preference
            app:key="pref_teacher_faq"
            app:title="@string/pref_faq" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_info">
        <Preference
            app:key="pref_teacher_about"
            app:title="@string/pref_about"
            app:summary="@string/app_version" />
    </PreferenceCategory>

</PreferenceScreen>