<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_student_progress"
        android:icon="@drawable/icon_progress"
        android:title="@string/see_my_development"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_student_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_student_alert"
        android:icon="@drawable/icon_notification"
        android:title="@string/sos"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_leave_session"
        android:icon="@drawable/icon_logout"
        android:title="@string/leave_session"
        app:showAsAction="ifRoom" />

</menu>