<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log"
        android:icon="@drawable/icon_notification"
        android:title="@string/send_multicast_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/broadcast"
        android:icon="@drawable/icon_broadcast"
        android:title="@string/send_multicast_message"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_route_details"
        android:icon="@drawable/icon_route_details"
        android:title="@string/route_details"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_end_session"
        android:icon="@drawable/icon_end_session"
        android:title="@string/end_session"
        app:showAsAction="ifRoom" />

</menu>