<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    style="@style/Theme.Deambulario.Teacher">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- APP LOGO -->
        <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/icon_deambulario"
            app:layout_constraintBottom_toTopOf="@+id/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <!-- APP TITLE -->
        <TextView
            android:id="@+id/welcome"
            style="@style/Title_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/welcome"
            app:layout_constraintBottom_toTopOf="@+id/btnTeacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_logo" />

        <!-- I'M TEACHER BUTTON -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTeacher"
            style="@style/Button_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/im_teacher"
            app:layout_constraintBottom_toTopOf="@+id/btnStudent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:layout_constraintWidth_max="250dp" />

        <!-- I'M STUDENT BUTTON -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStudent"
            style="@style/Button_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/forest_primary"
            android:text="@string/im_student"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTeacher"
            app:layout_constraintWidth_max="250dp"
            tools:ignore="TextContrastCheck" />

       <!-- PRIVACY LINK -->
        <TextView
            android:id="@+id/textview_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_label"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>